Fix NFT Image Overlay On Mobile Devices

--- a/css/style.css
+++ b/css/style.css
@@ -63,12 +63,14 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 300px;
+  max-height: 100%;
   border-radius: 0.5rem;
   background-color: hsla(178, 100%, 50%, 0.4);
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
   z-index: 10;
   opacity: 0;
   transition: opacity 0.3s ease;
